--- a/config/app.ini
+++ b/config/app.ini
@@ -31,7 +31,7 @@ Type = mysql
 User = homestead
 Password = secret
 Host = 127.0.0.1:33060
-Name = homestead
+Name = beego
 TablePrefix = ''
 
 [redis]
