--- a/config/app.ini
+++ b/config/app.ini
@@ -22,12 +22,13 @@ TimeFormat = 20060102
 [server]
 #debug or release
 RunMode = debug
-HttpPort = 8000
+HttpPort = 8888
 ReadTimeout = 60
 WriteTimeout = 60
 
 [database]
 Type = mysql
+SqlLog = true
 User = homestead
 Password = secret
 Host = 127.0.0.1:33060
